[package]
name = "rust-json-parse-bench"
version = "0.6.2"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = {version = "4", features = ["derive"]}
rust-json-parse = {path = "../rust-json-parse"}
serde_json = "1"
simd-json = {version = "0.7", features = ["allow-non-simd"]}
snmalloc-rs = "0.3"