[package]
name = "rust-json-parse-bench"
version = "0.6.3"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = {version = "4", features = ["derive"]}
rust-json-parse = {path = "../rust-json-parse"}
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
snmalloc-rs = {version = "0.3"}

[target.'cfg(any(target_feature = "neon", target_feature = "sse4.2"))'.dependencies]
simd-json = {version = "0.7"}
