[package]
name = "rust-json-parse-bench"
version = "0.6.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brochweb/rust-json-parse"
homepage = "https://github.com/brochweb/rust-json-parse"
readme = "../README.md"
description = "A tool for benchmarking different JSON parsers"
exclude = ["../tests"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
clap = {version = "4", features = ["derive"]}
rust-json-parse = {path = "../rust-json-parse"}
serde_json = "1"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rsbmalloc = "0.3"

[target.'cfg(any(target_feature = "neon", target_feature = "sse4.2"))'.dependencies]
simd-json = {version = "0.7"}
