[package]
name = "rust-json-parse"
version = "0.6.1"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = { version = "3", features = ["collections", "boxed"] }
hashbrown = { version = "0.13", features = ["bumpalo"] }
itertools = "0.10"
simdutf8 = { version = "0.1", features = ["aarch64_neon"] }
thiserror = "1"